Rename groupId,artifactId of social-addon